fixes #2 add the put endpoint to update existing pets
